[package]
name = "cashio-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.9.20"
solana-program = "1.9.20"
solana-program-test = "1.9.20"
solana-logger = "1.9.20"
spl-token = "3.3.0"
spl-associated-token-account = "1.0.5"

anchor-lang = "0.24.2"
anchor-spl = "0.24.2"

arrow-sunny = "0.3.1"
bankman = "0.3.1"
brrr = "0.3.1"
crate-token = "0.6.0"
stable-swap-client = "1.8.1"

brrr-shim = { path = "../brrr-shim" }

anyhow = { version = "1.0.57", features = ["backtrace"] }
tarpc = "0.27"
