[package]
name = "pocs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = { version = "0.1.5" }
level0 = { path = "../level0", features = ["no-entrypoint"] }
level1 = { path = "../level1", features = ["no-entrypoint"] }
level2 = { path = "../level2", features = ["no-entrypoint"] }
level3 = { path = "../level3", features = ["no-entrypoint"] }
level4 = { path = "../level4", features = ["no-entrypoint"] }

solana-program = "1.8.2"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { version = "*", features = ["no-entrypoint"] }

owo-colors = "3.1.0"
solana-logger = "1.8.2"

[lib]
